website/versioned_docs/version-0.11.0/modules/dependencies/cli-commands.mdx
---
sidebar_position: 3
---

import Snippet from '@site/src/components/Snippet';

# Module Dependency CLI Commands

Invowk provides a set of `invowk module` commands for managing module dependencies declared in `invowkmod.cue`.

## Command Overview

| Command | Description |
|---------|-------------|
| `invowk module add` | Add a module dependency (resolves, caches, updates lock file and `invowkmod.cue`) |
| `invowk module remove` | Remove a module dependency (updates lock file and `invowkmod.cue`) |
| `invowk module deps` | List resolved dependencies |
| `invowk module sync` | Resolve dependencies from `invowkmod.cue` |
| `invowk module update` | Update dependencies to latest matching versions |
| `invowk module tidy` | Add missing transitive dependencies to `invowkmod.cue` |
| `invowk module vendor` | Vendor dependencies into `invowk_modules/` |

## invowk module add

Resolve a dependency, cache it, update the lock file, and auto-edit `invowkmod.cue` to add the `requires` entry.

### Usage

<Snippet id="modules/dependencies/cli/add-usage" />

### Arguments

| Argument | Description |
|----------|-------------|
| `git-url` | Git repository URL (HTTPS or SSH) |
| `version` | Semantic version constraint |

### Flags

| Flag | Description |
|------|-------------|
| `--alias <name>` | Custom namespace for the dependency |
| `--path <path>` | Subdirectory within the repository |

### Examples

<Snippet id="modules/dependencies/cli/add-examples" />

### Output

<Snippet id="modules/dependencies/cli/add-output" />

:::note
`invowk module add` performs three actions automatically:
1. Resolves and caches the module
2. Updates the lock file
3. Auto-edits `invowkmod.cue` to add the `requires` entry (if the file exists)

The output looks like:
```
ℹ Resolving <url>@<version>...
✓ Module resolved and lock file updated
ℹ Git URL:   <url>
ℹ Version:   <requested> → <resolved>
ℹ Namespace: <namespace>
ℹ Cache:     <path>
✓ Updated invowkmod.cue with new requires entry
```
:::

## invowk module remove

Remove a module dependency from the lock file and `invowkmod.cue`.

### Usage

<Snippet id="modules/dependencies/cli/remove-usage" />

### Arguments

| Argument | Description |
|----------|-------------|
| `identifier` | Module identifier: git URL, alias, module name, or full key (`modulename@version`) |

### Examples

<Snippet id="modules/dependencies/cli/remove-example" />

### Output

<Snippet id="modules/dependencies/cli/remove-output" />

:::note
`invowk module remove` performs two actions automatically:
1. Removes the module from the lock file
2. Auto-edits `invowkmod.cue` to remove the corresponding `requires` entry

The output looks like:
```
Remove Module Dependency
ℹ Removing <identifier>...
✓ Removed <namespace>

✓ Lock file and invowkmod.cue updated
```

Cached files are not deleted.
:::

## invowk module deps

List all resolved dependencies from the lock file.

### Usage

<Snippet id="modules/dependencies/cli/deps-usage" />

### Output

<Snippet id="modules/dependencies/cli/deps-output" />

### No Dependencies

<Snippet id="modules/dependencies/cli/deps-empty" />

## invowk module sync

Sync all dependencies declared in `invowkmod.cue`. This reads the `requires` field, resolves version constraints, downloads modules, and updates the lock file.

### Usage

<Snippet id="modules/dependencies/cli/sync-usage" />

### Output

<Snippet id="modules/dependencies/cli/sync-output" />

### No Requirements

<Snippet id="modules/dependencies/cli/sync-empty" />

## invowk module update

Update dependencies to their latest versions matching the declared constraints.

### Usage

<Snippet id="modules/dependencies/cli/update-usage" />

### Arguments

| Argument | Description |
|----------|-------------|
| `identifier` | (Optional) Specific dependency to update: git URL, alias, module name, or full key (`modulename@version`) |

### Examples

<Snippet id="modules/dependencies/cli/update-examples" />

### Output

<Snippet id="modules/dependencies/cli/update-output" />

### No Updates

<Snippet id="modules/dependencies/cli/update-empty" />

## invowk module tidy

Scan all resolved modules' dependencies and add any missing transitive requirements to your `invowkmod.cue`. This implements the explicit-only dependency model: every module in the dependency tree must appear in your `invowkmod.cue`.

### Usage

```bash
invowk module tidy
```

### What It Does

1. Parses your `invowkmod.cue` to get declared requirements
2. Resolves each dependency and inspects its own `requires`
3. Identifies transitive dependencies not yet declared in your `invowkmod.cue`
4. Auto-adds missing entries to `invowkmod.cue`

After running `tidy`, run `invowk module sync` to update the lock file.

### Output

```
Tidy Module Dependencies
ℹ Found 3 requirement(s) in invowkmod.cue
ℹ Resolving dependencies to find missing transitive requirements...
✓ Added https://github.com/example/utils.invowkmod.git (^1.0.0)

✓ Added 1 missing transitive dependency(ies) to invowkmod.cue
ℹ Run invowk module sync to update the lock file
```

## invowk module vendor

Vendor dependencies into the `invowk_modules/` directory for offline use and distribution.

### Usage

<Snippet id="modules/dependencies/cli/vendor-usage" />

### Output

<Snippet id="modules/dependencies/cli/vendor-output" />

:::note
`invowk module vendor` resolves dependencies and copies them into `invowk_modules/`. If `invowkmod.lock.cue` exists, vendoring uses locked versions by default. Use `--update` to force re-resolution and `--prune` to remove stale vendored modules.
:::

## Common Workflows

### Initial Setup

<Snippet id="modules/dependencies/cli/workflow-init" />

### Fresh Clone

<Snippet id="modules/dependencies/cli/workflow-fresh" />

### Regular Updates

<Snippet id="modules/dependencies/cli/workflow-update" />

### Troubleshooting

<Snippet id="modules/dependencies/cli/workflow-troubleshoot" />

## Environment Variables

| Variable | Description |
|----------|-------------|
| `INVOWK_MODULES_PATH` | Override module cache directory |
| `GITHUB_TOKEN` | GitHub authentication |
| `GITLAB_TOKEN` | GitLab authentication |
| `GIT_TOKEN` | Generic Git authentication |

## Exit Codes

| Code | Meaning |
|------|---------|
| 0 | Success |
| 1 | General error |
| 1 | Module not found (for remove) |
| 1 | No invowkmod.cue found (for sync) |
| 1 | Version resolution failed |
| 1 | Git clone/fetch failed |
